--- a/demoupdate.plist
+++ b/demoupdate.plist
@@ -11,8 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>
-https://drive.usercontent.google.com/download?id=1L5LCf5BZ7OCE0avZ2C6hj0DkTHfxMGSO&export=download&authuser=1&confirm=t&uuid=0562d737-2cbe-483f-bbb3-d481122a78ec&at=AEz70l65f5EvRx2YEtZ6l2B-wmkt:1742067010143</string>
+					<string>https://2014.3d.tc/PatchedSideStore.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
